# yaipl

./: Cargo.toml  README.md
src/: build_program.rs  cli.rs  evaluator.rs  frontend.rs  lib.rs  main.rs  utils.rs
src/evaluator/: builtin.rs  evaluatable.rs  io_adaptor.rs  rt.rs
src/frontend/: lexer.rs  parser.rs  semantic_analysis.rs  span.rs
src/frontend/parser/: ast.rs  binary_parsing.rs  expression_parsing.rs
src/middleend/: hir.rs
src/utils/: diagnostics.rs  interner.rs  smallvec.rs  tinyvec.rs  tree_pretty_printer.rs
src/utils/interner/: branded.rs  interned.rs
tests/: assert_compile.rs
tests/compile_tests/compile_failure/: if_without_block.yaipl
tests/compile_tests/compile_success/: comparissons.yaipl  fibonacci.yaipl  is_green.yaipl  lot_o_parameters.yaipl  non_useful_while.yaipl  pascals_triangle.yaipl  primative.yaipl  whileloop.yaipl
