[package]
name = "yaipl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
logos = "0.12.1"
bitfield-struct = "0.1.7"
smallvec = {version ="1.10.0", features =["const_generics","arbitrary"]}
enum_dispatch = "0.3.11"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }

[dev-dependencies]
assert_cmd = "2.0.8"
rayon = "1.6.1"
